<resources>
    <string name="app_name">USGSMonitoring</string>
    <string name="nearThe">Near the</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="empty_earthquakes">There is no earthquakes</string>
    <string name="earthquakes_label">Earthquakes</string>
    <string name="weather_label">Weather</string>
    <string name="temperature_celsius_label">Temperature \u2103</string>
    <string name="atmospheric_pressure_label">Atmospheric pressure, hPa</string>
    <string name="humidity_label">Humidity, %</string>
    <string name="min_label">min</string>
    <string name="max_label">max</string>
    <string name="description">Description</string>
    <string name="info_about_select_city_description">Вы можете получить текущую погоду двумя способома с использованием геолокации или внести название города в тектовое поле</string>
    <string name="search">Search</string>
    <string name="request_location_label">Дать доступ к геолокации</string>
    <string name="warning_about_needs_permissions">This app needs Location and Storage permissions to work without and problems.</string>
    <string name="warning_some_permissions">You have denied some permissions. Allow all permissions at [Settings] > [Permissions]</string>
    <string name="grant_permissions">Yes, Grant permissions</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="no_exit_app">No, Exit app</string>
    <string name="nasa_label">Nasa</string>
    <string name="other_label">Other</string>
    <string name="load_photos_info">Получить фотографии с марсохода Curiosity, по определенной дате (солу). В диапазоне от 1 до 2463</string>
    <string name="warning_on_gps">Необходимо включить GPS</string>
    <string name="error_getting_last_location">Не получилось получить геолокацию. Перезапустите GPS или повторите попытку позже</string>
    <string name="date_label">Дата </string>
    <string name="network_connect">Интернет соединение восстановлено</string>
    <string name="network_disconnect">Соединение отсутствует</string>
    <string name="please_click_again_to_exit">Нажмите еще раз для выхода</string>
    <string name="nasa_apod">NASA Apod</string>
    <string name="mars_rovers_photos">Mars Rovers Photos</string>
    <string name="apod_description">Astronomy Picture of the Day</string>
    <string name="mars_rover_description">Image data gathered by NASA`s Curiosity, Opportunity and Spirit rovers on Mars</string>

</resources>
