<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <!--Row 1-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temperature_celsius_label"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/thermometer"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorEarthquakeLocation"
                android:textSize="38dp"
                android:text=""
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"/>


        </LinearLayout>

        <!--min-max box-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/min_label"/>
                <TextView
                    android:id="@+id/temp_min"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_marginLeft="5dp"
                    android:text=""
                    android:textSize="16dp"
                    android:textColor="@color/textColorEarthquakeLocation"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/max_label"/>
                <TextView
                    android:id="@+id/temp_max"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:layout_marginLeft="5dp"
                    android:text=""
                    android:textSize="16dp"
                    android:textColor="@color/textColorEarthquakeLocation"/>

            </LinearLayout>
        </LinearLayout>
        <!--End min-max box-->
    </LinearLayout>

    <!--Row 2-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/atmospheric_pressure_label"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text=""
            android:textSize="16dp"
            android:gravity="right"
            android:paddingRight="15dp"
            android:textColor="@color/textColorEarthquakeLocation"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/humidity_label"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text=""
            android:textSize="16dp"
            android:gravity="right"
            android:paddingRight="15dp"
            android:textColor="@color/textColorEarthquakeLocation"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/description"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text=""
            android:textSize="16dp"
            android:maxLines="2"
            android:gravity="right"
            android:paddingRight="15dp"
            android:textColor="@color/textColorEarthquakeLocation"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

</LinearLayout>